<resources>
    <string name="app_name">3T Class</string>

    <string name="msg_network_error">网络异常，请稍后重试</string>
    <string name="msg_unknown_error">请求超时，请稍后重试</string>
    <string name="msg_unconnection_error">无法连接到服务器,请稍后重试</string>
    <string name="msg_unVerification_error">验证码错误</string>
    <string name="msg_unRoom_error">该教室不存在</string>
    <string name="msg_unEnter_error">进入教室失败</string>
    <string name="msg_unCourse_start">当前课程未开始,请稍后重试</string>
    <string name="msg_argument_error">参数错误</string>
    <string name="msg_operation_kicked_out">您已被踢出教室</string>
    <string name="msg_operation_taecher_exit">教师退出教室</string>
    <string name="msg_operation_number_max">该教室学员人数已满</string>
    <string name="msg_operation_other_account">此帐号在其他地方登陆</string>
    <string name="msg_operation_net_abnormal">网络异常,服务已断开</string>
    <string name="msg_operation_live_out">网络连接中断</string>
    <string name="msg_creat_successful">创建成功</string>
    <string name="msg_creat_course_empty_error">课程名称不能为空</string>
    <string name="msg_creat_course_start_time_empty_error">开始时间不能为空</string>
    <string name="msg_creat_course_end_time_empty_error">结束时间不能为空</string>
    <string name="msg_creat_course_num_empty_error">课程人数不能为空</string>
    <string name="msg_creat_course_greater_num">人数必须大于10人</string>
    <string name="msg_creat_course_ten_to_one">人数必须在1到10之间</string>
    <string name="msg_creat_now_time">选择时间不能小于当前时间</string>
    <string name="msg_creat_end_time">结束时间不能小于起始时间</string>
    <string name="defult_load_content">请稍后</string>
    <string name="account_login_text">帐号登录</string>
    <string name="login_loading_text">正在登录...</string>
    <string name="login_load_error">登录失败</string>
    <string name="account_login_registered">帐号注册</string>
    <string name="registered_success">注册成功</string>
    <string name="new_user_registration">新用户注册</string>
    <string name="confirm_account_registered">确认注册</string>
    <string name="registered_account_confirm">此手机号已经注册</string>
    <string name="et_login_account">请输入邀请码</string>
    <string name="et_login_iphone">请输入手机号</string>
    <string name="et_login_username">请输入用户名</string>
    <string name="et_login_password_reset">请输入密码</string>
    <string name="et_login_correct_iphone">请输入正确的手机号</string>
    <string name="et_login_password_sms_code">请输入验证码</string>
    <string name="tv_obtain_verification_code">获取验证码</string>
    <string name="mobile_no_registered">此手机号并未注册!</string>
    <string name="mobile_registered_successful">帐号注册成功</string>
    <string name="et_login_password_num">请输入6-20位密码</string>
    <string name="et_login_nickname">请输入昵称</string>
    <string name="bt_login_enter_room">进入教室</string>
    <string name="account_password_login">帐号密码登录</string>
    <string name="et_login_phone">手机号</string>
    <string name="et_login_password">密码</string>
    <string name="bt_login">登录</string>
    <string name="tv_login_carry_out">完成</string>
    <string name="forget_password">忘记密码？</string>
    <string name="login_retrieve_password">找回密码</string>
    <string name="get_code">获取验证码</string>
    <string name="input_code">输入验证码</string>
    <string name="agin_get_code">重新获取</string>
    <string name="verification_code_send_successful">验证码发送成功</string>
    <string name="next_steup">下一步</string>
    <string name="modify_password_successful">修改密码成功</string>
    <string name="password_twice">确认密码</string>
    <string name="account_parameter_error">帐号参数错误</string>
    <string name="confirm_password">确认修改</string>
    <string name="start_create">完成创建</string>
    <string name="edit_course">编辑</string>
    <string name="playback_course">回放</string>
    <string name="delete">删除</string>
    <string name="long_time">长期课程</string>
    <string name="one_on_one_tutoring">一对一</string>
    <string name="small_class">小班课</string>
    <string name="big_class">大班课</string>
    <string name="live_unStart">未开始</string>
    <string name="living">直播中</string>
    <string name="running">进行中</string>
    <string name="live_end">已结束</string>
    <string name="live_overdue">已失效</string>
    <string name="key_code_public">公开码进入</string>
    <string name="key_code_request">直接进入</string>
    <string name="key_code_private">私有码</string>
    <string name="confirm">确定</string>ac
    <string name="cancle">取消</string>
    <string name="del_hint">删除提示</string>
    <string name="confirm_del">确定删除吗?</string>
    <string name="confirm_del_course">确定删除该课件?</string>
    <string name="play_back">回放</string>
    <string name="course_name">课程名称</string>
    <string name="durtion">时长</string>
    <string name="operation">操作</string>
    <string name="courseware">添加课件窗口</string>
    <string name="personnel_invitation_speak">邀请发言</string>
    <string name="personnel_ban_speak">禁止发言</string>
    <string name="personnel_out_room">踢出教室</string>
    <string name="personnel_close_event">断开连麦</string>
    <string name="personnel_remove_speak">允许发言</string>
    <string name="input_out_empty">发送消息不能为空</string>
    <string name="creat_course">创建直播间</string>
    <string name="personnel_num">人员名单</string>
    <string name="waiter_enter">稍后进入</string>
    <string name="enter_confirm">仍然进入</string>
    <string name="is_enter_live">直播未开始,是否进入?</string>
    <string name="mes_hint">提示信息</string>
    <string name="is_lm_invite">教师邀请发言，是否接受</string>
    <string name="refuse_lm">拒绝</string>
    <string name="ccept_lm">接受</string>
    <string name="accont_login">邀请码登录</string>
    <string name="invitation_code_no">邀请码不能为空</string>
    <string name="invitation_code_error">邀请码错误</string>
    <string name="invitation_name_no">昵称不能为空</string>
    <string name="lm_size_four">最多打开四路连麦窗口</string>
    <string name="share_course">分享课程</string>
    <string name="exit_room_dialog">退出教室 ?</string>
    <string name="we_chat">微信</string>
    <string name="qq">QQ</string>
    <string name="we_chat_friend">微信朋友圈</string>
    <string name="sina_weibo">微博</string>
    <string name="q_zone">空间</string>
    <string name="link">链接</string>
    <string name="message">短信</string>
    <string name="invitation_teacher_code">点击复制教师参加码:%1$s</string>
    <string name="invitation_student_code">点击复制学生参加码:%1$s</string>
    <string name="student_invite_code">学生参加码:%1$s</string>
    <string name="teacher_invite_code">教师参加码:%1$s</string>
    <string name="current_courseware_empty">当前课件为空</string>
    <string name="main_videoups_up">V-%1$skbps\u2191</string>
    <string name="videoly_videodown_down">A-%1$skbps\u2193</string>
    <string name="video_up">kbps\u2191</string>
    <string name="video_down">kbps\u2193</string>
    <string name="apply_lm_state_ing">正在申请连麦中,请稍等...</string>
    <string name="apply_lm_agree_ing">当前已处于连麦状态...</string>
    <string name="current_room_no_classe">教室未开课</string>
    <string name="start_course_req">开始</string>
    <string name="start_course_res">上课</string>
    <string name="live_teacher">教师</string>
    <string name="live_student">学生</string>
    <string name="live_banned">教师已开启禁言,当前为不可编辑状态</string>
    <string name="live_personnel_list">学员列表</string>
    <string name="live_trophy_count">答题统计</string>
    <string name="live_answer">答题器</string>
    <string name="live_answer_tips">提示:点击字母预设正确答案</string>
    <string name="live_answer_tips_one">提示：提交后不可更改答案</string>
    <string name="permission_write_external_storage">程序需要缓存一些数据在SD卡，否则无法运行。</string>
    <string name="permission_camera">程序需要使用摄像头权限用来音视频通话，否则无法运行。</string>
    <string name="permission_record_audio">程序需要录音权限用来音视频通话，否则无法运行。</string>
    <string name="permission_read_phone_state">程序需要电话监听权限用来音视频通话，否则无法运行。</string>
    <string name="concave_area">应用内容被凹形区域遮挡时,可尝试在设置 -- 显示 --
        应用全屏显示 -- 凹形区域显示控制,里面有关闭凹形区域开关，用户可通过这个关闭凹形区域避免遮挡</string>
    <string name="splash_activity">Copyright © 2017 三体云联科技有限公司 版权所有</string>
    <string name="network_stauts_delay">延迟:</string>
    <string name="network_stauts_packet_loss_rate">丢包率:</string>
    <string name="network_stauts_state">状态:</string>
    <string name="network_stauts_not_classes">未开课</string>
    <string name="network_stauts_has_classes">已开课:</string>
    <string name="network_stauts_optimal">优</string>
    <string name="network_stauts_good">良</string>
    <string name="network_stauts_poor">一般</string>
    <string name="pop_notice_room">暂无公告!</string>
    <string name="text_no_course">暂无直播的课程 ^-^</string>


    <!-- WebViewToolPopupWindow -->
    <string name="close_webview_tool">退出画笔</string>
    <string name="title_webview_tool">选择你的画笔</string>
    <string name="land_title_tool">画笔工具</string>
    <string name="webview_text">文字</string>
    <string name="live_me_chating">我的聊天</string>

    <!--登录校验提示信息-->
    <string name="toast_mobile_unregisted">手机号未注册!</string>
    <string name="toast_mobile_incorrect">请输入正确的手机号!</string>
    <string name="toast_input_password_empty">请输入密码</string>
    <string name="toast_input_password_least_6">密码长度最少为6位</string>
    <string name="filter_login_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="rule_password">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ`¬!"£$%^*()~=#{}[];':,./?/*-_+&#060;&#062;&#064;&#038;</string>
    <string name="rule_phone">0123456789</string>
    <!--注册页面信息-->
    <string name="user_agree">用户协议</string>
    <string name="millisecond">ms</string>

    <string name="model_video">老师切换为视频模式</string>
    <string name="model_normal">老师切换为课件模式</string>
    <string name="hint_question">请尽量详细的描述课堂中所发生的问题，方便工作人员能快速的定位问题并帮您解决</string>


</resources>

