<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginTop="@dimen/dp176"
        android:background="@drawable/shape_login_edit_bg"
        android:hint="@string/et_login_password"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginRight="@dimen/dp33"
        android:paddingLeft="@dimen/dp10"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/shape_login_edit_bg"
        android:hint="@string/password_twice"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginRight="@dimen/dp33"
        android:paddingLeft="@dimen/dp10"/>

    <Button
        android:id="@+id/bt_next_steup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginRight="@dimen/dp33"
        android:enabled="false"
        android:background="@drawable/shape_login_button_bg"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:text="@string/confirm_password"/>

</LinearLayout>