<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/shape_couse_more"
    android:orientation="vertical"
    android:layout_width="@dimen/dp88"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44">

        <TextView
            android:clickable="true"
            android:id="@+id/edit_course"
            android:layout_marginLeft="@dimen/dp30"
            android:layout_marginRight="@dimen/dp30"
            android:layout_marginTop="@dimen/dp12"
            android:layout_marginBottom="@dimen/dp12"
            android:layout_width="@dimen/dp28"
            android:layout_height="@dimen/dp20"
            android:text="@string/edit_course"
            android:textColor="@color/course_more_text_color"
            android:textSize="@dimen/sp14"
            />

    </LinearLayout>

    <TextView
        android:id="@+id/playback_course"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:text="@string/playback_course"
        android:textColor="@color/course_more_text_color"
        android:textSize="@dimen/sp14"
        />


    <TextView
        android:id="@+id/delete_course"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp44"
        android:text="@string/delete"
        android:textColor="@color/course_more_text_color"
        android:textSize="@dimen/sp14"
        />

</LinearLayout>