<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context="com.tttlive.education.ui.course.playback.PlayBackListActivity">
    <include layout="@layout/title_view"/>

    <LinearLayout
        android:paddingLeft="@dimen/dp20"
        android:paddingRight="@dimen/dp30"
        android:background="#FFF8F8F8"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp40">
        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/course_name"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/durtion"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="14sp"
            android:gravity="center"
            android:text="@string/operation"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <in.srain.cube.views.ptr.PtrClassicFrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:cube_ptr="http://schemas.android.com/apk/res-auto"
        android:id="@+id/ptr_load_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        cube_ptr:ptr_duration_to_close="200"
        cube_ptr:ptr_duration_to_close_header="1000"
        cube_ptr:ptr_keep_header_when_refresh="true"
        cube_ptr:ptr_ratio_of_header_height_to_refresh="1.2"
        cube_ptr:ptr_resistance="1.7">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/load_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </in.srain.cube.views.ptr.PtrClassicFrameLayout>
</LinearLayout>
