<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/layout_share_student"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/dp60"
              android:background="@color/color_80000000"
             >
<LinearLayout
    android:layout_alignParentBottom="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white">


    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="@dimen/dp120"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/student_share_wechat"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp120"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_wechat"/>

            <TextView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/we_chat"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_share_wechat_friend"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp120"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_group"/>

            <TextView
                android:layout_width="@dimen/dp80"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/we_chat_friend"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_share_sina"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp120"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_weibo"/>

            <TextView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/sina_weibo"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_share_message"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <ImageView
                android:background="@drawable/icon_share_message"
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"/>

            <TextView
                android:layout_marginTop="@dimen/dp4"
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:text="@string/message"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp120">

        <LinearLayout
            android:id="@+id/student_share_qq"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp120"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_qq"/>

            <TextView
                android:gravity="center"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/qq"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_share_qzone"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp120"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_zone"/>

            <TextView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/q_zone"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/student_share_link"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp120"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_url"/>

            <TextView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/link"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>
</RelativeLayout>