<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/title_view"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginTop="@dimen/dp128"
        android:background="@drawable/shape_login_edit_bg"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginRight="@dimen/dp32">

        <ImageView
            android:id="@+id/iv_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/invite_code"
            android:layout_marginLeft="@dimen/dp18"
            android:layout_centerVertical="true"/>

        <EditText
            android:layout_centerVertical="true"
            android:id="@+id/et_invite_code"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/iv_invite"
            android:hint="@string/et_login_phone"
            android:textSize="@dimen/sp18"
            android:textColor="@color/color_FF333333"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:paddingLeft="@dimen/dp5"
            android:text="user800056"
            android:background="@null"/>

    </RelativeLayout>


    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginTop="@dimen/dp30"
        android:background="@drawable/shape_login_edit_bg"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginRight="@dimen/dp32">

        <ImageView
            android:id="@+id/iv_nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/nickname"
            android:layout_marginLeft="@dimen/dp18"
            android:layout_centerVertical="true"/>

        <EditText
            android:inputType="textPassword"
            android:id="@+id/et_nickname"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:layout_toRightOf="@id/iv_nickname"
            android:hint="@string/et_login_password"
            android:textSize="@dimen/sp18"
            android:layout_marginLeft="@dimen/dp10"
            android:layout_marginRight="@dimen/dp10"
            android:textColor="@color/color_FF333333"
            android:paddingLeft="@dimen/dp5"
            android:text="AA5C2546"
            android:background="@null"/>

        <CheckBox

            android:padding="@dimen/dp5"
            android:layout_marginRight="@dimen/dp5"
            android:id="@+id/cb_password"
            android:button="@null"
            android:background="@drawable/selector_login_password"
            android:layout_alignParentRight="true"
            android:layout_toRightOf="@+id/et_nickname"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <Button
        android:id="@+id/bt_enter_room"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp54"
        android:layout_marginTop="@dimen/dp40"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginRight="@dimen/dp32"
        android:enabled="false"
        android:background="@drawable/shape_login_button_bg"
        android:textColor="@color/white"
        android:textSize="@dimen/sp20"
        android:text="@string/bt_login"/>

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:textColor="@color/color_FF364557"
        android:textSize="@dimen/sp16"
        android:layout_marginLeft="@dimen/dp33"
        android:layout_marginTop="@dimen/dp20"
        android:visibility="gone"/>

</LinearLayout>
