<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_share_teacher"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_80000000"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:paddingTop="@dimen/dp15">


        <LinearLayout
            android:id="@+id/teacher_share_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_wechat" />

            <TextView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/we_chat"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teacher_share_qq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_qq" />

            <TextView
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/teacher_share_message"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="@dimen/dp64"
                android:layout_height="@dimen/dp64"
                android:background="@drawable/icon_share_message" />

            <TextView
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp22"
                android:layout_marginTop="@dimen/dp4"
                android:text="@string/message"
                android:textColor="@color/color_FF666666"
                android:textSize="@dimen/sp16" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>